Only push on tags
As helm-varnish-cache has no staging, only push to Docker OCI
registry on tag to reduce noises on Artifacthub and Docker Hub.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,7 +208,6 @@ workflows:
             - build_varnish_cache
           filters:
             branches:
-              only:
-                - main
+              ignore: /.*/
             tags:
               only: /^v.*/
