--- a/varnish-cache/values.yaml
+++ b/varnish-cache/values.yaml
@@ -265,6 +265,25 @@ server:
     # Sets the maximum number of replicas to spawn.
     maxReplicas: 100
 
+    # Configures the behavior.
+    behavior: {}
+    #behavior:
+    #  scaleDown:
+    #    stabilizationWindowSeconds: 120
+    #    policies:
+    #      - type: Percent
+    #        value: 50
+    #        periodSeconds: 60
+    #  scaleUp:
+    #    policies:
+    #      - type: Percent
+    #        value: 100
+    #        periodSeconds: 60
+    #      - type: Pods
+    #        value: 4
+    #        periodSeconds: 60
+    #      selectPolicy: Max
+
     # Configures the autoscaling metrics. Can be set as a templated string
     # or a YAML map.
     metrics: ""
