--- a/varnish-cache/templates/hpa.yaml
+++ b/varnish-cache/templates/hpa.yaml
@@ -25,7 +25,7 @@ spec:
   minReplicas: {{ .Values.server.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.server.autoscaling.maxReplicas }}
   behavior:
-  {{- toYaml .Values.server.autoscaling.behavior.scaleDown | nindent 4 }}
+  {{- toYaml .Values.server.autoscaling.behavior | nindent 4 }}
 {{- if .Values.server.autoscaling.metrics }}
   metrics:
 {{- $tp := typeOf .Values.server.autoscaling.metrics }}
