--- a/varnish-cache/templates/hpa.yaml
+++ b/varnish-cache/templates/hpa.yaml
@@ -24,6 +24,10 @@ spec:
     name: {{ include "varnish-cache.fullname" . }}
   minReplicas: {{ .Values.server.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.server.autoscaling.maxReplicas }}
+{{- if not (empty .Values.server.autoscaling.behavior) }}
+  behavior:
+  {{- toYaml .Values.server.autoscaling.behavior | nindent 4 }}
+{{- end }}
 {{- if .Values.server.autoscaling.metrics }}
   metrics:
 {{- $tp := typeOf .Values.server.autoscaling.metrics }}
