Allow setting extraEnvs
extraEnvs is currently missing in varnish-cache chart. This PR make sure it
available and can be set as a YAML map, a list, or a template string.

Backported-from: enterprise-1.5.0

--- a/varnish-cache/values.yaml
+++ b/varnish-cache/values.yaml
@@ -110,6 +110,9 @@ server:
   #    mode: "0700"
   #    proto: "PROXY"
 
+  # Sets the extra environment variables for Varnish Enterprise.
+  extraEnvs: {}
+
   # Sets the default Time To Live (TTL) for cached objects.
   ttl: 120
 
