Replaced typeOf with kindOf
In addition to returning type, kindOf also normalizes the name of the type:

    typeOf "string"  # returns "string"
    typeOf aSlice    # returns "map[]interface {}"
    typeOf aMap      # returns "map[string]interface {}"

As demostrated, typeOf rely too much on internal representation of the value.
Whereas in kindOf, everything is normalized:

    kindOf "string"  # returns "string"
    kindOf aSlice    # returns "slice"
    kindOf aMap      # returns "map"

Backported-from: enterprise-1.5.0

--- a/varnish-cache/templates/hpa.yaml
+++ b/varnish-cache/templates/hpa.yaml
@@ -30,7 +30,7 @@ spec:
 {{- end }}
 {{- if .Values.server.autoscaling.metrics }}
   metrics:
-{{- $tp := typeOf .Values.server.autoscaling.metrics }}
+{{- $tp := kindOf .Values.server.autoscaling.metrics }}
 {{- if eq $tp "string" }}
   {{- tpl .Values.server.autoscaling.metrics . | trim | nindent 4 }}
 {{- else }}
