--- a/varnish-cache/templates/extra.yaml
+++ b/varnish-cache/templates/extra.yaml
@@ -3,7 +3,7 @@
 {{- range $v := $extraManifests }}
 ---
 # Name: {{ $v.name }}
-{{- $tp := typeOf $v.data }}
+{{- $tp := kindOf $v.data }}
 {{- if eq $tp "string" }}
 {{ tpl $v.data $ }}
 {{- else }}
