Consolidate annotations and labels to use field helper
Instead of building annotations using a template string, switch
to using (dict) helper to construct annotations. This allows
duplicate keys to properly be handled (i.e. overwrite), alongside
with support for `global.podAnnotations`, and merging of templated
string.

Backported-from: enterprise-1.5.0

--- a/varnish-cache/templates/daemonset.yaml
+++ b/varnish-cache/templates/daemonset.yaml
@@ -9,10 +9,8 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: {{ include "varnish-cache.fullname" . }}
-  labels:
-    {{- include "varnish-cache.labels" . | nindent 4 }}
-    {{- include "varnish-cache.serverLabels" . | indent 4 }}
-  {{- include "varnish-cache.serverAnnotations" . | indent 2 }}
+  {{- include "varnish-cache.serverLabels" . | nindent 2 }}
+  {{- include "varnish-cache.serverAnnotations" . | nindent 2 }}
 spec:
   {{- include "varnish-cache.updateStrategy" . | indent 2 }}
   selector:
@@ -20,8 +18,8 @@ spec:
       {{- include "varnish-cache.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- include "varnish-cache.podLabels" . | indent 6 }}
-      {{- include "varnish-cache.podAnnotations" . | indent 6 }}
+      {{- include "varnish-cache.podLabels" . | nindent 6 }}
+      {{- include "varnish-cache.podAnnotations" . | nindent 6 }}
     spec:
       {{- include "varnish-cache.podImagePullSecrets" . | indent 6 }}
       {{- include "varnish-cache.podServiceAccount" . | indent 6 }}
