--- a/varnish-cache/templates/statefulset.yaml
+++ b/varnish-cache/templates/statefulset.yaml
@@ -6,10 +6,8 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ include "varnish-cache.fullname" . }}
-  labels:
-    {{- include "varnish-cache.labels" . | nindent 4 }}
-    {{- include "varnish-cache.serverLabels" . | indent 4 }}
-  {{- include "varnish-cache.serverAnnotations" . | indent 2 }}
+  {{- include "varnish-cache.serverLabels" . | nindent 2 }}
+  {{- include "varnish-cache.serverAnnotations" . | nindent 2 }}
 spec:
   serviceName: {{ include "varnish-cache.fullname" . }}
   {{- if not .Values.server.autoscaling.enabled }}
@@ -21,8 +19,8 @@ spec:
       {{- include "varnish-cache.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- include "varnish-cache.podLabels" . | indent 6 }}
-      {{- include "varnish-cache.podAnnotations" . | indent 6 }}
+      {{- include "varnish-cache.podLabels" . | nindent 6 }}
+      {{- include "varnish-cache.podAnnotations" . | nindent 6 }}
     spec:
       {{- include "varnish-cache.podImagePullSecrets" . | indent 6 }}
       {{- include "varnish-cache.podServiceAccount" . | indent 6 }}
@@ -44,7 +42,7 @@ spec:
       {{- include "varnish-cache.terminationGracePeriodSeconds" . | indent 6 }}
   {{- if not (empty .Values.server.extraVolumeClaimTemplates) }}
   volumeClaimTemplates:
-    {{- $tp := typeOf .Values.server.extraVolumeClaimTemplates }}
+    {{- $tp := kindOf .Values.server.extraVolumeClaimTemplates }}
     {{- if eq $tp "string" }}
       {{- tpl .Values.server.extraVolumeClaimTemplates . | trim | nindent 4 }}
     {{- else }}
