Use varnish-cache's default VCL instead of providing the default
Closes #3

The default VCL in the varnish-cache Docker image allows configuring
the backend via an environment variable. By allowing this VCL to be
used, we can ensure the way to configure the Helm chart is consistent
with a plain Docker.

See also https://github.com/varnish/docker-varnish/pull/73

--- a/varnish-cache/values.yaml
+++ b/varnish-cache/values.yaml
@@ -244,13 +244,7 @@ server:
   vclConfigPath: "/etc/varnish/default.vcl"
 
   # Configures the default VCL. Can be set as a templated string.
-  vclConfig: |
-    vcl 4.1;
-
-    backend default {
-      .host = "127.0.0.1";
-      .port = "8080";
-    }
+  vclConfig: ""
 
   # Use the content of the given file path as VCL configuration. The file will be
   # parsed as templated string. Will override "server.vclConfig" if set. Note that
