--- a/varnish-cache/values.yaml
+++ b/varnish-cache/values.yaml
@@ -556,6 +556,39 @@ server:
               app.kubernetes.io/instance: {{ .Release.Name }}
           topologyKey: kubernetes.io/hostname
 
+  # Enable or Disable Network Policy.
+  # See also: https://kubernetes.io/docs/concepts/services-networking/network-policies/
+  networkPolicy:
+    enabled: false
+
+    # Allow all connections from any source. To be set to false if extraIngress is used.
+    allowIngress: true
+
+    # Allow all connections to any destinations. To be set to false if extraEgress is used.
+    allowEgress: true
+
+    # Config custom ingress rules to the NetworkPolicy.
+    extraIngress: []
+    # extraIngress:
+    #   - from:
+    #     - podSelector:
+    #         matchLabels:
+    #           component: apache
+    #     ports:
+    #     - port: 8080
+    #       protocol: TCP
+
+    # Config custom egress rules to the NetworkPolicy.
+    extraEgress: []
+    # extraEgress:
+    #   - to:
+    #     - podSelector:
+    #         matchLabels:
+    #           component: apache
+    #     ports:
+    #     - port: 80
+    #       protocol: TCP
+
   # Configures the Varnish NCSA sidecar.
   varnishncsa:
     enabled: true
