--- a/varnish-cache/templates/networkpolicy.yaml
+++ b/varnish-cache/templates/networkpolicy.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "varnish-cache.name" . }}
+      {{- include "varnish-cache.selectorLabels" . | nindent 6 }}
   policyTypes:
     - Ingress
     - Egress
